# PRT

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
src/: CMakeLists.txt  bvh.cpp  bvh.h  camera.cpp  camera.h  diffuse_visualizer.cpp  diffuse_visualizer.h  gbuffer_visualizer.cpp  gbuffer_visualizer.h  image.cpp  image.h  light.cpp  light.h  log.cpp  log.h  main.cpp  material.cpp  material.h  mesh.cpp  mesh.h  normal_visualizer.cpp  normal_visualizer.h  path_tracer.cpp  path_tracer.h  platform.h  prt.h  random.h  ray.h  sample_models.cpp  sample_models.h  scene.cpp  scene.h  stats.h  texture.cpp  texture.h  thread_pool.cpp  thread_pool.h  triangle.cpp  triangle.h  vecmath.cpp  (+1 more)
tests/: CMakeLists.txt  tests.cpp
